<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Refuel</string>
    <string name="km">Km</string>
    <string name="kmHint">km run</string>
    <string name="price">Price</string>
    <string name="priceHint">fuel price</string>
    <string name="quantity">Qty</string>
    <string name="quantityHint">fuel amount</string>
    <string name="paid">Paid</string>
    <string name="paidHint">paid amount</string>
    <string name="fuelStation">Station</string>
    <string name="fuelStationHint">address</string>
    <string name="buttonSave">Save</string>
    <string name="buttonCancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="imagePrice">Price thumbnail</string>
    <string name="imageKm">Odograph thumbnail</string>
    <string name="imageQuantity">Quantity thumbnail</string>
    <string name="imagePaid">Paid amount thumbnail</string>
    <string name="title_activity_show_single_refuel_data">Single Refuel Data Info</string>
    <string name="invalidToken">invalid token</string>
    <string name="noDataAvailable">no data available</string>
    <string name="buttonInsertNew">Insert new</string>
    <string name="buttonDelete">Remove</string>
    <string name="title_activity_show_all_refuel_data">All Refuel Data</string>
    <string name="buttonShowAll">Show all</string>

</resources>