<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/singleRefuelOneLine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/oneLineKm"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#000000"
        android:text="@string/km" />

    <TextView
        android:id="@+id/oneLinePrice"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#000000"
        android:text="@string/price" />

    <TextView
        android:id="@+id/oneLinePaid"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="@string/paid" />

    <TextView
        android:id="@+id/oneLineQuantity"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="@string/quantity" />

    <TextView
        android:id="@+id/oneLineFuelStation"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:textSize="15dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="@string/fuelStationHint" />

</LinearLayout>