<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refuelDataLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.veontomo.refuel.RefuelDataActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/km"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/km" />

        <EditText
            android:id="@+id/kmInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/km"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/km"
            android:layout_toRightOf="@id/km"
            android:hint="@string/kmHint"
            android:inputType="phone"
            android:textColor="#7F70D8"
            android:textSize="20sp" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/price"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/priceInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/price"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/price"
            android:layout_toRightOf="@id/price"
            android:hint="@string/priceHint"
            android:inputType="phone"
            android:textColor="#7F70D8"
            android:textSize="20sp" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/quantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/quantityInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/quantity"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/quantity"
            android:layout_toRightOf="@id/quantity"
            android:hint="@string/quantityHint"
            android:inputType="phone"
            android:textColor="#7F70D8"
            android:textSize="20sp" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/paid"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/paid" />

        <EditText
            android:id="@+id/paidInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/paid"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/paid"
            android:layout_toRightOf="@id/paid"
            android:hint="@string/paidHint"
            android:inputType="phone"
            android:textColor="#7F70D8"
            android:textSize="20sp" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/fuelStation"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/fuelStation" />

        <EditText
            android:id="@+id/fuelStationInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/fuelStation"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/fuelStation"
            android:layout_toRightOf="@id/fuelStation"
            android:hint="@string/fuelStationHint"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="8"
            android:textColor="#7F70D8"
            android:textSize="20sp" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/buttonSave" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/buttonSave"
            android:layout_toEndOf="@id/buttonSave"
            android:layout_toRightOf="@id/buttonSave"
            android:text="@string/buttonCancel" />

        <ImageView
            android:id="@+id/imageKm"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/imageKm"
            android:src="@drawable/km" />

        <TextView
            android:id="@+id/km1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/imageKm"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/imageKm"
            android:layout_toRightOf="@id/imageKm"
            android:text="AAA" />

        <ImageView
            android:id="@+id/imagePrice"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imageKm"
            android:contentDescription="@string/imagePrice"
            android:src="@drawable/price" />

        <TextView
            android:id="@+id/price1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imagePrice"
            android:layout_alignLeft="@id/km1"
            android:layout_alignStart="@id/km1"
            android:layout_toEndOf="@id/imagePrice"
            android:layout_toRightOf="@id/imagePrice"
            android:text="BBB" />

        <ImageView
            android:id="@+id/imageQuantity"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imagePrice"
            android:contentDescription="@string/imageQuantity"
            android:src="@drawable/fuel_gauge" />

        <TextView
            android:id="@+id/quantity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageQuantity"
            android:layout_alignLeft="@id/km1"
            android:layout_alignStart="@id/km1"
            android:layout_toEndOf="@id/imageQuantity"
            android:layout_toRightOf="@id/imageQuantity"
            android:text="CCC" />

        <ImageView
            android:id="@+id/imagePaid1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imageQuantity"
            android:contentDescription="@string/imagePaid"
            android:src="@drawable/paid" />

        <TextView
            android:id="@+id/paid1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/price1"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@id/km1"
            android:layout_toEndOf="@id/imagePaid1"
            android:layout_toRightOf="@id/imagePaid1"
            android:text="DDD" />
    </RelativeLayout>

</LinearLayout>