<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.veontomo.refuel.ShowSingleRefuelDataActivity" >

    <ImageView
        android:id="@+id/imageKm"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/imageKm"
        android:src="@drawable/km" />

    <TextView
        android:id="@+id/kmValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageKm"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@id/imageKm"
        android:layout_toRightOf="@id/imageKm"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imagePrice"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/imageKm"
        android:layout_margin="15dp"
        android:contentDescription="@string/imagePrice"
        android:src="@drawable/price" />

    <TextView
        android:id="@+id/priceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imagePrice"
        android:layout_alignLeft="@id/kmValue"
        android:layout_alignStart="@id/kmValue"
        android:layout_toEndOf="@id/imagePrice"
        android:layout_toRightOf="@id/imagePrice"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageQuantity"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/imagePrice"
        android:layout_margin="15dp"
        android:contentDescription="@string/imageQuantity"
        android:src="@drawable/fuel_gauge" />

    <TextView
        android:id="@+id/quantityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageQuantity"
        android:layout_alignLeft="@id/kmValue"
        android:layout_alignStart="@id/kmValue"
        android:layout_toEndOf="@id/imageQuantity"
        android:layout_toRightOf="@id/imageQuantity"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imagePaid"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/imageQuantity"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/imagePaid"
        android:src="@drawable/paid" />

    <TextView
        android:id="@+id/paidValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imagePaid"
        android:layout_alignLeft="@id/kmValue"
        android:layout_alignStart="@id/kmValue"
        android:layout_toEndOf="@id/imagePaid"
        android:layout_toRightOf="@id/imagePaid"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageAddress"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/imagePaid"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/imagePaid"
        android:src="@drawable/address" />
    <TextView
        android:id="@+id/addressValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageAddress"
        android:layout_alignLeft="@id/kmValue"
        android:layout_alignStart="@id/kmValue"
        android:layout_toEndOf="@id/imageAddress"
        android:layout_toRightOf="@id/imageAddress"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageAddress"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">
        <Button
            android:id="@+id/buttonInsertNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/buttonInsertNew" />

        <Button
            android:id="@+id/buttonShowAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/buttonShowAll" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/buttonDelete" />
    </LinearLayout>

</RelativeLayout>